# rspm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  prd.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark-rspm.sh  compare-rspm-pm2.sh
benchmarks/fixtures/: bench-app.js  log-many.js
crates/rspm-cli/: Cargo.toml
crates/rspm-cli/src/: cli.rs  main.rs
crates/rspm-cli/src/commands/: describe.rs  env.rs  flush.rs  id.rs  kill.rs  list.rs  logs.rs  mod.rs  pid.rs  ping.rs  reload_logs.rs  reset.rs  resurrect.rs  save.rs  scale.rs  send_signal.rs  start.rs  startup.rs  target.rs
crates/rspm-cli/src/format/: color.rs  json.rs  mod.rs  table.rs
crates/rspm-cli/tests/: cli_end_to_end.rs
crates/rspm-client/: Cargo.toml
crates/rspm-client/src/: api.rs  client.rs  daemon_launcher.rs  lib.rs  reconnect.rs
crates/rspm-cluster/: Cargo.toml
crates/rspm-cluster/src/: fd_passing.rs  lib.rs  reuseport.rs
crates/rspm-config/: Cargo.toml
crates/rspm-config/src/: env_expand.rs  lib.rs  loader.rs  normalize.rs  schema.rs
crates/rspm-config/src/format/: ecosystem.rs  json.rs  mod.rs  toml.rs  yaml.rs
crates/rspm-config/tests/: load.rs  parse_formats.rs
crates/rspm-core/: Cargo.toml
crates/rspm-core/src/: constants.rs  defaults.rs  error.rs  lib.rs  paths.rs  version.rs
crates/rspm-core/src/types/: app.rs  byte_size.rs  env.rs  metric.rs  mod.rs  process.rs
crates/rspm-core/tests/: paths.rs  restart_policy.rs
crates/rspm-daemon/: Cargo.toml
crates/rspm-daemon/src/: god.rs  handler.rs  lib.rs  log_capture.rs  main.rs  pid_file.rs  worker.rs
crates/rspm-daemon/src/handlers/: mod.rs
crates/rspm-daemon/src/supervisor/: cluster_mode.rs  fork_mode.rs  lifecycle.rs  mod.rs
crates/rspm-daemon/tests/: god_lifecycle.rs  parity_matrix.rs
crates/rspm-dashboard/: Cargo.toml
crates/rspm-dashboard/src/: app.rs  input.rs  lib.rs  ui.rs
crates/rspm-deploy/: Cargo.toml
crates/rspm-deploy/src/: git.rs  hooks.rs  lib.rs  ssh.rs
crates/rspm-http/: Cargo.toml
crates/rspm-http/src/: lib.rs  server.rs
crates/rspm-http/src/routes/: logs.rs  mod.rs  processes.rs
crates/rspm-ipc/: Cargo.toml
crates/rspm-ipc/src/: bus.rs  client.rs  codec.rs  handshake.rs  lib.rs  server.rs
crates/rspm-ipc/tests/: server_client.rs
crates/rspm-logs/: Cargo.toml
crates/rspm-logs/src/: lib.rs  rotator.rs  tail.rs  timestamp.rs  writer.rs
crates/rspm-modules/: Cargo.toml
crates/rspm-modules/src/: installer.rs  lib.rs  lifecycle.rs  registry.rs
crates/rspm-monitor/: Cargo.toml
crates/rspm-monitor/src/: aggregator.rs  lib.rs  sampler.rs
crates/rspm-protocol/: Cargo.toml
crates/rspm-protocol/src/: event.rs  frame.rs  lib.rs  request.rs  response.rs  version.rs
crates/rspm-protocol/tests/: frame.rs  round_trip.rs
crates/rspm-startup/: Cargo.toml
crates/rspm-startup/src/: detect.rs  generator.rs  lib.rs
crates/rspm-watcher/: Cargo.toml
crates/rspm-watcher/src/: debounce.rs  lib.rs  matcher.rs  watcher.rs
docs/: architecture.md  cli-reference.md  migration-from-pm2.md  protocol.md
docs/i18n/id/: README.md
examples/: apps.toml  cluster-node.js  ecosystem.config.js  long-running.sh
npm/: README.md  package.json
npm/scripts/: install.js
tests/: Cargo.toml
tests/e2e/cli/: dump.sh  reload.sh  resurrect.sh  right-exit-code.sh  start-app.sh
tests/fixtures/: README.md  delayed-exit.sh  echo.sh  env-print.sh  graceful.sh  ignore-sigint.sh  log-many.sh  mem-hog.sh  ready-sentinel.sh  sleeper.sh  throw-stable.sh  throw.sh
tests/src/: lib.rs
tests/tests/: auto_restart.rs  client.rs  cluster.rs  common.rs  describe_env_id_pid.rs  dump.rs  env_switching.rs  exp_backoff_restart_delay.rs  flush.rs  god.rs  graceful.rs  id.rs  instances.rs  logs.rs  max_memory_limit.rs  path_resolution.rs  reload_locker.rs  resurect_state.rs  scale.rs  signals.rs  stop_exit_codes.rs  treekill.rs  watch.rs
