[package]
name = "rspm-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rspm-core = { path = "../rspm-core" }
rspm-ipc = { path = "../rspm-ipc" }
rspm-protocol = { path = "../rspm-protocol" }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

