[package]
name = "rspm-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
rspm-core = { path = "../rspm-core" }
rspm-protocol = { path = "../rspm-protocol" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true

