[package]
name = "rspm-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rspm-core = { path = "../rspm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
