[package]
name = "rspm-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
globset.workspace = true
notify.workspace = true
rspm-core = { path = "../rspm-core" }
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true

